@startuml domain_model

' general definitions

!define PACKAGE_COLOR DDDDDD

'Packages and Class definitions'
together {
package "Common Aggregate" #PACKAGE_COLOR {
    abstract class Entity {
    - id: UUID
    - version: int
    - discarded: boolean
    - date_created: timestamp
    }
    note left of Entity: Every entity inherits \nfrom this class.

    class Language {
        - name: string
        - acronym: string
    }

    class URL << value object >> {
        parts: List[string]
    }

    Entity -[hidden]> Language
    Entity -[hidden]> URL

}

package "Category Aggregate" #PACKAGE_COLOR {
    class Category << aggregate root >> {
    - name: string
    }
}

package "Vendor Aggregate" #PACKAGE_COLOR {
    class Vendor << aggregate root >> {
    - name: string
    - description: string
    - url: string
    - is_active: boolean
    - date_last_crawled: datetime
    - recipe_pattern: string
    }
}

}




package "Recipe Aggregate" #PACKAGE_COLOR {
    class Recipe << aggregate root >> {
        - name: string
        - description: string
        - vendor_id: string
        - prep_time: timedelta
        - cook_time: timedelta
        - total_time: timedelta
        - url: string
    }

    class Image {
        - url: string
    }

    class AggregateRating << value object >> {
        - rating_count: int
        - rating_value: float
    }

    class Ingredient {
        - text: string
    }

    class RecipeURL << value object>> {
        - name: string
    }

}

package "User Aggregate" #PACKAGE_COLOR {
    class User << aggregate root >> {
    - name: string
    - first_name: string
    - is_confirmed: boolean
    - date_last_login: timestamp
    }

    class CategoryLike {
    - views: int
    - matches: int
    }

    class EMail << value object >> {
        - parts: string
    }

    User -[hidden]> CategoryLike
}

package "Match Aggregate" #PACKAGE_COLOR {
    class Match << aggregate root >>{
    - timestamp: timestamp
    - is_seen_by_user: bool
    - is_active: bool
    }
}


'Relationships'
Vendor "1" -r-> "0..*" Category
Vendor -l-> "1..*" Language
Category "1" --> "0..*" Recipe
User "0..*" - "0..*" Category
(User, Category) . CategoryLike
User -d-* "1" EMail
User "1" --> "0..*" Match
User --> "0..*" Language
Recipe "1" --> "0..*" Match
Recipe "1" --* "1..*" Image
Recipe "1" --* "0..*" Ingredient
Recipe -r--* "1" RecipeURL
RecipeURL --|> URL
Recipe "1" -d-* "0..1" AggregateRating
Recipe -u-> "1" Vendor

@enduml